# sharecoin

./: .gitignore  LICENSE  README.md  START-HERE.txt  USECASES.md  generate_wallet.py  patch_bitcoin_util_cpp.py  patch_block_cpp.py  patch_block_h.py  patch_blockchain_cpp.py  patch_blockstorage_cpp.py  patch_branding_sweep.py  patch_chain_h.py  patch_chainparams.py  patch_chainparams_msvc_compat.py  patch_client_cpp.py  patch_headerssync_h.py  patch_interfaces_cpp.py  patch_interfaces_mining_h.py  patch_miner_cpp.py  patch_miner_h.py  patch_pow_cpp.py  patch_pow_cpp_additions.py  patch_pow_h.py  patch_rpc_mining_additions.py  patch_rpc_mining_new_rpcs.py  patch_rpc_randombeacon.py  patch_server_util_cpp.py  patch_src_cmakelists.py  patch_validation_cpp.py  start-mining.bat  start-node.bat  stop-node.bat
bitcoin-source/: CMakeLists.txt
bitcoin-source/src/: CMakeLists.txt  bitcoin-cli.cpp  bitcoin-util.cpp  bitcoind.cpp  chain.h  chainparamsbase.cpp  headerssync.cpp  headerssync.h  key.cpp  pow.cpp  pow.h  validation.cpp
bitcoin-source/src/common/: args.cpp  signmessage.cpp
bitcoin-source/src/consensus/: params.h
bitcoin-source/src/crypto/ethash/: CMakeLists.txt
bitcoin-source/src/interfaces/: mining.h
bitcoin-source/src/kernel/: chainparams.cpp
bitcoin-source/src/node/: blockstorage.cpp  interfaces.cpp  miner.cpp  miner.h
bitcoin-source/src/primitives/: block.cpp  block.h
bitcoin-source/src/qt/: CMakeLists.txt  addressbookpage.cpp  bitcoingui.cpp  guiutil.cpp  (+6 more)
docs/: BEACON-SPEC.md  BEACON-SPEC.md.ots  DETAILS.md  WINDOWS.md
wallet/: start-wallet.bat
(+18 files in other folders)
